# pk16

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  pk16.back.circ  pk16.circ
compiler/: CMakeLists.txt
compiler/header/: cli_parser.hpp  compiler.hpp  config.hpp  copy_add.hpp  eval_regex.hpp  exception.hpp  function.hpp  get_semilines.hpp  lines.hpp  preprocessor.hpp  register_copy.hpp  stack.hpp  symbol.hpp  symbol_table.hpp  symbolize.hpp  tree.hpp  types.hpp  util.hpp
compiler/source/: main.cpp  run.cpp
crumb/: opcode_decoder.cru
docs/: bus.md  cost.md  microcode.md  opcodes.md  standards.md
firmware/: Makefile  main.asm
firmware/arch/: entry.asm  memory.asm  periph.asm  rules.asm
old_compiler/header/: cdata.hpp  compiler.hpp  config.hpp  function_call.hpp  label_generator.hpp  memory_write.hpp  parse_lines.hpp  regex_patterns.hpp  register_move.hpp  symbol_table.hpp  trim.hpp
old_compiler/source/: label_generator.cpp
old_old_compiler/header/: compiler_exceptions.hpp  infix.hpp  label_gen.hpp  list.hpp  memory_read.hpp  move_add.hpp  queue.hpp
old_old_compiler/source/: add_file.cpp  evaluate.cpp  main.cpp
pk16/: fp-info-cache  pk16-B_Cu.gbr  pk16-B_Mask.gbr  pk16-B_Paste.gbr  pk16-B_Silkscreen.gbr  pk16-Edge_Cuts.gbr  pk16-F_Cu.gbr  pk16-F_Mask.gbr  pk16-F_Paste.gbr  pk16-F_Silkscreen.gbr  pk16-job.gbrjob  pk16.kicad_pcb  pk16.kicad_prl  pk16.kicad_pro  pk16.kicad_sch
pkc/: main.pkc  multiply.pkc
projects/: init.asm  opcodes.asm
projects/fibonacci/: 7seg.asm  delay.asm  main.asm
source/: entry.asm  main.asm  main.txt
(+114 files in other folders)
